Added media queries

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h3>404 Not Found</h3>
     </header>
     <main>
-      <section class="flex wrapper">
+      <section class="flex wrapper md-flex-col">
         <section class="image">
           <img src="./Scarecrow.png" alt="" />
         </section>
@@ -38,6 +38,8 @@
         </section>
       </section>
     </main>
-    <footer>I dont know</footer>
+    <footer>
+      <p>Coded by <a href="">sreehariv-code</a></p>
+    </footer>
   </body>
 </html>
